--- a/src/scss/05_components/_components.header.scss
+++ b/src/scss/05_components/_components.header.scss
@@ -9,7 +9,7 @@ $header-height-mobile: 5.6rem;
   flex-direction: row;
   height: $header-height-mobile;
   padding: 1rem 0;
-  position: fixed;
+  // position: fixed;
   top: 0;
   left: 0;
   right: 0;
