--- a/src/scss/03_elements/_elements.code.scss
+++ b/src/scss/03_elements/_elements.code.scss
@@ -62,7 +62,7 @@
     }
 
     &__output {
-      background-color: rgb(var(--lia-anthracite));
+      background: linear-gradient(135deg, rgb(var(--lia-anthracite)), rgb(var(--lia-anthracite)) calc(100% - 1.25rem), rgb(var(--color-highlight-dark)) 0%);
       margin: 0;
       // when this value is changed, also the maxHeight value in
       //   src/typescript/webcomponents/terminal.ts
@@ -72,7 +72,12 @@
       overflow-y: auto;
       padding: 1rem 1.6rem;
       white-space: pre;
-    }
+
+      // highlight the resize handler on chrome
+      &::-webkit-resizer {
+        background: linear-gradient(135deg, rgb(var(--lia-anthracite)), rgb(var(--lia-anthracite)) 50%, rgb(var(--color-highlight-dark)) 0%);
+      }
+    }    
   }
 
   &__input {
