--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -25,7 +25,7 @@
   }
 
   &__container {
-    margin-top: calc(#{$header-height-mobile});
+    //margin-top: calc(#{$header-height-mobile});
     height: 100%;
     overflow: auto;
     position: relative;
