--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -26,7 +26,7 @@ $slide-margin-left-textbook: 19rem !default;
   position: relative;
   transition: $global-transition;
   transition-property: left, right, width;
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
 
   @include breakpoint("sm", "max") {
@@ -54,7 +54,7 @@ $slide-margin-left-textbook: 19rem !default;
 
   @include breakpoint("sm") {
     &.lia-toc--visible {
-      padding-left: $toc-width-desktop;
+      left: $toc-width-desktop;
       width: calc(100% - #{$toc-width-desktop});
 
       .lia-header {
@@ -149,7 +149,7 @@ $slide-margin-left-textbook: 19rem !default;
 
     @include breakpoint("lg") {
       .lia-slide__content {
-        margin-left: calc(#{$slide-margin-left-presentation} - 3rem);
+        // margin-left: calc(#{$slide-margin-left-presentation} - 3rem);
       }
     }
   }
