fix: Style checkmarks

--- a/src/scss/03_elements/_elements.input.scss
+++ b/src/scss/03_elements/_elements.input.scss
@@ -103,7 +103,7 @@ input[type="search"]::-webkit-search-results-decoration {
 
   &:after {
     color: white;
-    content: "\EA09";
+    content: "\EA0C";
     font-family: "icon";
     left: 50%;
     opacity: 0;
