--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -26,6 +26,11 @@
 
   &__container {
     margin-top: calc(#{$header-height-mobile});
+
+    @include breakpoint("md") {
+      margin-top: calc(#{$header-height-desktop});
+    }
+
     height: 100%;
     overflow: auto;
     position: relative;
@@ -37,7 +42,7 @@
     width: 100%;
 
     @include breakpoint("md") {
-      margin: calc(#{$header-height-desktop}) 0 2rem;
+      margin: calc(#{$header-height-desktop} - 7rem) 0 2rem;
     }
   }
 }
