improve(CSS): Color contrast in terminal

--- a/src/scss/00_settings/_settings.colors.scss
+++ b/src/scss/00_settings/_settings.colors.scss
@@ -19,4 +19,5 @@ $global-colors: (
   "yellow-darker": "124,60,0",
   "yellow-dark": "189,125,32",
   "yellow": "227,151,38",
+  "black": "0,0,0"
 );
