improve(CSS): remove max-width from footer

--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -9,7 +9,7 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    max-width: 144rem;
+    // max-width: 144rem;
     width: 100%;
     z-index: 50;
 
