Add shake animation on receive new message

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import "01_tools/tools.hidden-visually";
 @import "01_tools/tools.str-replace";
 @import "01_tools/tools.transition";
+@import "01_tools/tools.animation";
 
 // Generic
 @import "02_generic/generic.reset";
