Base navigation added

--- a/src/assets/fonts/icon/_icons.scss
+++ b/src/assets/fonts/icon/_icons.scss
@@ -240,362 +240,367 @@ $icon-barchart: "\EA05";
   content: $icon-barchart
 }
 
-$icon-beaker: "\EA06";
-.icon-beaker:before {
-  content: $icon-beaker
-}
-
-$icon-book: "\EA07";
+$icon-book: "\EA06";
 .icon-book:before {
   content: $icon-book
 }
 
-$icon-boxplot: "\EA08";
+$icon-boxplot: "\EA07";
 .icon-boxplot:before {
   content: $icon-boxplot
 }
 
-$icon-chat-close: "\EA09";
+$icon-chat-close: "\EA08";
 .icon-chat-close:before {
   content: $icon-chat-close
 }
 
-$icon-chat-new: "\EA0A";
+$icon-chat-new: "\EA09";
 .icon-chat-new:before {
   content: $icon-chat-new
 }
 
-$icon-chat-open: "\EA0B";
+$icon-chat-open: "\EA0A";
 .icon-chat-open:before {
   content: $icon-chat-open
 }
 
-$icon-check: "\EA0C";
+$icon-check: "\EA0B";
 .icon-check:before {
   content: $icon-check
 }
 
-$icon-chevron-double-left: "\EA0D";
+$icon-chevron-double-left: "\EA0C";
 .icon-chevron-double-left:before {
   content: $icon-chevron-double-left
 }
 
-$icon-chevron-double-right: "\EA0E";
+$icon-chevron-double-right: "\EA0D";
 .icon-chevron-double-right:before {
   content: $icon-chevron-double-right
 }
 
-$icon-chevron-down: "\EA0F";
+$icon-chevron-down: "\EA0E";
 .icon-chevron-down:before {
   content: $icon-chevron-down
 }
 
-$icon-chevron-left: "\EA10";
+$icon-chevron-left: "\EA0F";
 .icon-chevron-left:before {
   content: $icon-chevron-left
 }
 
-$icon-chevron-right: "\EA11";
+$icon-chevron-right: "\EA10";
 .icon-chevron-right:before {
   content: $icon-chevron-right
 }
 
-$icon-chevron-up: "\EA12";
+$icon-chevron-up: "\EA11";
 .icon-chevron-up:before {
   content: $icon-chevron-up
 }
 
-$icon-class-off: "\EA13";
+$icon-class-off: "\EA12";
 .icon-class-off:before {
   content: $icon-class-off
 }
 
-$icon-class-on: "\EA14";
+$icon-class-on: "\EA13";
 .icon-class-on:before {
   content: $icon-class-on
 }
 
-$icon-clock: "\EA15";
+$icon-clock: "\EA14";
 .icon-clock:before {
   content: $icon-clock
 }
 
-$icon-close: "\EA16";
+$icon-close: "\EA15";
 .icon-close:before {
   content: $icon-close
 }
 
-$icon-code: "\EA17";
+$icon-code: "\EA16";
 .icon-code:before {
   content: $icon-code
 }
 
-$icon-compile-circle: "\EA18";
+$icon-compile-circle: "\EA17";
 .icon-compile-circle:before {
   content: $icon-compile-circle
 }
 
-$icon-darkmode: "\EA19";
+$icon-darkmode: "\EA18";
 .icon-darkmode:before {
   content: $icon-darkmode
 }
 
-$icon-download: "\EA1A";
+$icon-download: "\EA19";
 .icon-download:before {
   content: $icon-download
 }
 
-$icon-edrys: "\EA1B";
+$icon-edrys: "\EA1A";
 .icon-edrys:before {
   content: $icon-edrys
 }
 
-$icon-end-left: "\EA1C";
+$icon-end-left: "\EA1B";
 .icon-end-left:before {
   content: $icon-end-left
 }
 
-$icon-end-right: "\EA1D";
+$icon-end-right: "\EA1C";
 .icon-end-right:before {
   content: $icon-end-right
 }
 
-$icon-funnel: "\EA1E";
+$icon-funnel: "\EA1D";
 .icon-funnel:before {
   content: $icon-funnel
 }
 
-$icon-graph: "\EA1F";
+$icon-graph: "\EA1E";
 .icon-graph:before {
   content: $icon-graph
 }
 
-$icon-grid: "\EA20";
+$icon-grid: "\EA1F";
 .icon-grid:before {
   content: $icon-grid
 }
 
-$icon-gundb: "\EA21";
+$icon-gundb: "\EA20";
 .icon-gundb:before {
   content: $icon-gundb
 }
 
-$icon-heatmap: "\EA22";
+$icon-heatmap: "\EA21";
 .icon-heatmap:before {
   content: $icon-heatmap
 }
 
-$icon-hint: "\EA23";
+$icon-hint: "\EA22";
 .icon-hint:before {
   content: $icon-hint
 }
 
-$icon-info: "\EA24";
+$icon-info: "\EA23";
 .icon-info:before {
   content: $icon-info
 }
 
-$icon-jitsi: "\EA25";
+$icon-jitsi: "\EA24";
 .icon-jitsi:before {
   content: $icon-jitsi
 }
 
-$icon-lightmode: "\EA26";
+$icon-lightmode: "\EA25";
 .icon-lightmode:before {
   content: $icon-lightmode
 }
 
-$icon-lineplot: "\EA27";
+$icon-lineplot: "\EA26";
 .icon-lineplot:before {
   content: $icon-lineplot
 }
 
-$icon-list-1: "\EA28";
+$icon-list-1: "\EA27";
 .icon-list-1:before {
   content: $icon-list-1
 }
 
-$icon-list-2: "\EA29";
+$icon-list-2: "\EA28";
 .icon-list-2:before {
   content: $icon-list-2
 }
 
-$icon-list-3: "\EA2A";
+$icon-list-3: "\EA29";
 .icon-list-3:before {
   content: $icon-list-3
 }
 
-$icon-login: "\EA2B";
+$icon-login: "\EA2A";
 .icon-login:before {
   content: $icon-login
 }
 
-$icon-mail: "\EA2C";
+$icon-mail: "\EA2B";
 .icon-mail:before {
   content: $icon-mail
 }
 
-$icon-map: "\EA2D";
+$icon-map: "\EA2C";
 .icon-map:before {
   content: $icon-map
 }
 
-$icon-matrix: "\EA2E";
+$icon-matrix: "\EA2D";
 .icon-matrix:before {
   content: $icon-matrix
 }
 
-$icon-minus: "\EA2F";
+$icon-minus: "\EA2E";
 .icon-minus:before {
   content: $icon-minus
 }
 
-$icon-more: "\EA30";
+$icon-more: "\EA2F";
 .icon-more:before {
   content: $icon-more
 }
 
-$icon-parallel: "\EA31";
+$icon-navigation-hide: "\EA30";
+.icon-navigation-hide:before {
+  content: $icon-navigation-hide
+}
+
+$icon-navigation-show: "\EA31";
+.icon-navigation-show:before {
+  content: $icon-navigation-show
+}
+
+$icon-parallel: "\EA32";
 .icon-parallel:before {
   content: $icon-parallel
 }
 
-$icon-pencil: "\EA32";
+$icon-pencil: "\EA33";
 .icon-pencil:before {
   content: $icon-pencil
 }
 
-$icon-person: "\EA33";
+$icon-person: "\EA34";
 .icon-person:before {
   content: $icon-person
 }
 
-$icon-piechart: "\EA34";
+$icon-piechart: "\EA35";
 .icon-piechart:before {
   content: $icon-piechart
 }
 
-$icon-play-circle: "\EA35";
+$icon-play-circle: "\EA36";
 .icon-play-circle:before {
   content: $icon-play-circle
 }
 
-$icon-plus: "\EA36";
+$icon-plus: "\EA37";
 .icon-plus:before {
   content: $icon-plus
 }
 
-$icon-presentation: "\EA37";
+$icon-presentation: "\EA38";
 .icon-presentation:before {
   content: $icon-presentation
 }
 
-$icon-pubnub: "\EA38";
+$icon-pubnub: "\EA39";
 .icon-pubnub:before {
   content: $icon-pubnub
 }
 
-$icon-radar: "\EA39";
+$icon-radar: "\EA3A";
 .icon-radar:before {
   content: $icon-radar
 }
 
-$icon-refresh: "\EA3A";
+$icon-refresh: "\EA3B";
 .icon-refresh:before {
   content: $icon-refresh
 }
 
-$icon-resolve: "\EA3B";
+$icon-resolve: "\EA3C";
 .icon-resolve:before {
   content: $icon-resolve
 }
 
-$icon-sankey: "\EA3C";
+$icon-sankey: "\EA3D";
 .icon-sankey:before {
   content: $icon-sankey
 }
 
-$icon-scatterplot: "\EA3D";
+$icon-scatterplot: "\EA3E";
 .icon-scatterplot:before {
   content: $icon-scatterplot
 }
 
-$icon-search: "\EA3E";
+$icon-search: "\EA3F";
 .icon-search:before {
   content: $icon-search
 }
 
-$icon-send: "\EA3F";
+$icon-send: "\EA40";
 .icon-send:before {
   content: $icon-send
 }
 
-$icon-settings: "\EA40";
+$icon-settings: "\EA41";
 .icon-settings:before {
   content: $icon-settings
 }
 
-$icon-slides: "\EA41";
+$icon-slides: "\EA42";
 .icon-slides:before {
   content: $icon-slides
 }
 
-$icon-social: "\EA42";
+$icon-social: "\EA43";
 .icon-social:before {
   content: $icon-social
 }
 
-$icon-sort-asc: "\EA43";
+$icon-sort-asc: "\EA44";
 .icon-sort-asc:before {
   content: $icon-sort-asc
 }
 
-$icon-sort-desc: "\EA44";
+$icon-sort-desc: "\EA45";
 .icon-sort-desc:before {
   content: $icon-sort-desc
 }
 
-$icon-sound-off: "\EA45";
+$icon-sound-off: "\EA46";
 .icon-sound-off:before {
   content: $icon-sound-off
 }
 
-$icon-sound-on: "\EA46";
+$icon-sound-on: "\EA47";
 .icon-sound-on:before {
   content: $icon-sound-on
 }
 
-$icon-stop-circle: "\EA47";
+$icon-stop-circle: "\EA48";
 .icon-stop-circle:before {
   content: $icon-stop-circle
 }
 
-$icon-sync: "\EA48";
+$icon-sync: "\EA49";
 .icon-sync:before {
   content: $icon-sync
 }
 
-$icon-table: "\EA49";
+$icon-table: "\EA4A";
 .icon-table:before {
   content: $icon-table
 }
 
-$icon-trash: "\EA4A";
+$icon-trash: "\EA4B";
 .icon-trash:before {
   content: $icon-trash
 }
 
-$icon-warning: "\EA4B";
+$icon-warning: "\EA4C";
 .icon-warning:before {
   content: $icon-warning
 }
 
-$icon-zoom-out: "\EA4C";
+$icon-zoom-out: "\EA4D";
 .icon-zoom-out:before {
   content: $icon-zoom-out
 }
 
-$icon-zoom: "\EA4D";
+$icon-zoom: "\EA4E";
 .icon-zoom:before {
   content: $icon-zoom
 }
