--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -29,7 +29,7 @@ $slide-margin-left-textbook: 19rem !default;
   width: 100vw;
   overflow-x: hidden;
 
-  @include breakpoint("sm", "max") {
+  @include breakpoint('sm', 'max') {
     /* push support-menu-toggler to the right if toc is open,
        prevent that buttons overlay each other */
     &.lia-toc--visible #lia-btn-support {
@@ -52,7 +52,7 @@ $slide-margin-left-textbook: 19rem !default;
     }
   }
 
-  @include breakpoint("sm") {
+  @include breakpoint('sm') {
     &.lia-toc--visible {
       left: $toc-width-desktop;
       width: calc(100% - #{$toc-width-desktop});
@@ -76,14 +76,14 @@ $slide-margin-left-textbook: 19rem !default;
     }
   }
 
-  @include breakpoint("md") {
+  @include breakpoint('md') {
     &.lia-toc--visible.lia-mode--presentation .lia-slide__content,
     &.lia-toc--visible.lia-mode--textbook .lia-slide__content {
       //width: auto;
     }
   }
 
-  @include breakpoint("lg") {
+  @include breakpoint('lg') {
     flex-direction: row;
 
     &.lia-support--visible {
@@ -98,7 +98,7 @@ $slide-margin-left-textbook: 19rem !default;
       height: calc(100vh - 14.2rem + 7rem);
     }
 
-    @include breakpoint("lg") {
+    @include breakpoint('lg') {
       .lia-header {
         right: $notes-width-desktop;
       }
@@ -116,11 +116,11 @@ $slide-margin-left-textbook: 19rem !default;
       max-width: calc(71.1rem + #{$slide-margin-left-textbook} + 3rem);
       padding-left: 3rem !important;
 
-      @include breakpoint("sm") {
+      @include breakpoint('sm') {
         margin: 1.25rem 0 2rem;
       }
 
-      @include breakpoint("md") {
+      @include breakpoint('md') {
         margin: 4.5rem 0 2rem;
       }
     }
@@ -130,7 +130,7 @@ $slide-margin-left-textbook: 19rem !default;
       justify-content: center;
     }
 
-    @include breakpoint("md") {
+    @include breakpoint('md') {
       .lia-slide__content {
         padding-left: $slide-margin-left-textbook;
       }
@@ -147,7 +147,7 @@ $slide-margin-left-textbook: 19rem !default;
       max-width: 124.6rem;
     }
 
-    @include breakpoint("lg") {
+    @include breakpoint('lg') {
       .lia-slide__content {
         // margin-left: calc(#{$slide-margin-left-presentation} - 3rem);
       }
@@ -155,17 +155,24 @@ $slide-margin-left-textbook: 19rem !default;
   }
 
   &.lia-navigation--hidden {
-    .lia-slide__content {
-      margin: 0 2rem;
-    }
-  
     .lia-slide {
       height: 100vh;
+
+      &__container {
+        margin-top: 0px;
+      }
+
+      &__content {
+        margin: 0 2rem;
+      }
+
+      &__footer {
+        display: none;
+      }
     }
 
     #lia-btn-toc {
-      //transform: translate(2.2rem, -50%);
-      top: 0.8rem;
+      top: 1.8rem;
       padding: 0;
     }
 
@@ -180,22 +187,49 @@ $slide-margin-left-textbook: 19rem !default;
         transform: translate(0rem, -50%);
       }
     }
-  
-    .lia-header, .lia-slide__footer {
-      display: none;
+
+    .lia-header {
+      flex-direction: column;
+      height: 5.8rem;
+      margin: 0;
+      position: absolute;
+      right: 1.8rem;
+      left: unset;
+      z-index: 100;
+      top: 0px;
+      width: 2rem;
     }
 
-    @include breakpoint("lg", "max") {
+    .lia-support-menu {
+      &__nav {
+        flex-direction: column;
+      }
+
+      @include breakpoint('md', 'min') {
+        &__submenu {
+          right: 3rem;
+          top: 2rem;
+        }
+
+        &__item {
+          padding: 0px;
+
+          button {
+            // Styles for buttons within any level of sub-children
+            padding-right: 0px;
+            padding-left: 0px;
+          }
+        }
+      }
+    }
+
+    @include breakpoint('lg', 'max') {
       .lia-notes {
         //position: fixed;
         max-height: 4px;
         //padding: 0px;
         bottom: 0px;
       }
-    }
-  
-    .lia-slide__container {
-      margin-top: 0px;
     }
   }
 }
