fix(CSS): background-color in select in darkmode

--- a/src/scss/02_generic/_generic.normalize.scss
+++ b/src/scss/02_generic/_generic.normalize.scss
@@ -177,6 +177,10 @@
   input { /* 1 */
     overflow: visible;
   }
+
+  optgroup {
+    background-color: rgb(var(--color-background));
+  }
   
   /**
    * Remove the inheritance of text transform in Edge, Firefox, and IE.
