--- a/src/assets/fonts/icon/_icons.scss
+++ b/src/assets/fonts/icon/_icons.scss
@@ -455,147 +455,152 @@ $icon-more: "\EA30";
   content: $icon-more
 }
 
-$icon-parallel: "\EA31";
+$icon-p2pt: "\EA31";
+.icon-p2pt:before {
+  content: $icon-p2pt
+}
+
+$icon-parallel: "\EA32";
 .icon-parallel:before {
   content: $icon-parallel
 }
 
-$icon-pencil: "\EA32";
+$icon-pencil: "\EA33";
 .icon-pencil:before {
   content: $icon-pencil
 }
 
-$icon-person: "\EA33";
+$icon-person: "\EA34";
 .icon-person:before {
   content: $icon-person
 }
 
-$icon-piechart: "\EA34";
+$icon-piechart: "\EA35";
 .icon-piechart:before {
   content: $icon-piechart
 }
 
-$icon-play-circle: "\EA35";
+$icon-play-circle: "\EA36";
 .icon-play-circle:before {
   content: $icon-play-circle
 }
 
-$icon-plus: "\EA36";
+$icon-plus: "\EA37";
 .icon-plus:before {
   content: $icon-plus
 }
 
-$icon-presentation: "\EA37";
+$icon-presentation: "\EA38";
 .icon-presentation:before {
   content: $icon-presentation
 }
 
-$icon-pubnub: "\EA38";
+$icon-pubnub: "\EA39";
 .icon-pubnub:before {
   content: $icon-pubnub
 }
 
-$icon-radar: "\EA39";
+$icon-radar: "\EA3A";
 .icon-radar:before {
   content: $icon-radar
 }
 
-$icon-refresh: "\EA3A";
+$icon-refresh: "\EA3B";
 .icon-refresh:before {
   content: $icon-refresh
 }
 
-$icon-resolve: "\EA3B";
+$icon-resolve: "\EA3C";
 .icon-resolve:before {
   content: $icon-resolve
 }
 
-$icon-sankey: "\EA3C";
+$icon-sankey: "\EA3D";
 .icon-sankey:before {
   content: $icon-sankey
 }
 
-$icon-scatterplot: "\EA3D";
+$icon-scatterplot: "\EA3E";
 .icon-scatterplot:before {
   content: $icon-scatterplot
 }
 
-$icon-search: "\EA3E";
+$icon-search: "\EA3F";
 .icon-search:before {
   content: $icon-search
 }
 
-$icon-send: "\EA3F";
+$icon-send: "\EA40";
 .icon-send:before {
   content: $icon-send
 }
 
-$icon-settings: "\EA40";
+$icon-settings: "\EA41";
 .icon-settings:before {
   content: $icon-settings
 }
 
-$icon-slides: "\EA41";
+$icon-slides: "\EA42";
 .icon-slides:before {
   content: $icon-slides
 }
 
-$icon-social: "\EA42";
+$icon-social: "\EA43";
 .icon-social:before {
   content: $icon-social
 }
 
-$icon-sort-asc: "\EA43";
+$icon-sort-asc: "\EA44";
 .icon-sort-asc:before {
   content: $icon-sort-asc
 }
 
-$icon-sort-desc: "\EA44";
+$icon-sort-desc: "\EA45";
 .icon-sort-desc:before {
   content: $icon-sort-desc
 }
 
-$icon-sound-off: "\EA45";
+$icon-sound-off: "\EA46";
 .icon-sound-off:before {
   content: $icon-sound-off
 }
 
-$icon-sound-on: "\EA46";
+$icon-sound-on: "\EA47";
 .icon-sound-on:before {
   content: $icon-sound-on
 }
 
-$icon-stop-circle: "\EA47";
+$icon-stop-circle: "\EA48";
 .icon-stop-circle:before {
   content: $icon-stop-circle
 }
 
-$icon-sync: "\EA48";
+$icon-sync: "\EA49";
 .icon-sync:before {
   content: $icon-sync
 }
 
-$icon-table: "\EA49";
+$icon-table: "\EA4A";
 .icon-table:before {
   content: $icon-table
 }
 
-$icon-trash: "\EA4A";
+$icon-trash: "\EA4B";
 .icon-trash:before {
   content: $icon-trash
 }
 
-$icon-warning: "\EA4B";
+$icon-warning: "\EA4C";
 .icon-warning:before {
   content: $icon-warning
 }
 
-$icon-zoom-out: "\EA4C";
+$icon-zoom-out: "\EA4D";
 .icon-zoom-out:before {
   content: $icon-zoom-out
 }
 
-$icon-zoom: "\EA4D";
+$icon-zoom: "\EA4E";
 .icon-zoom:before {
   content: $icon-zoom
 }
