--- a/src/assets/fonts/icon/icons.css
+++ b/src/assets/fonts/icon/icons.css
@@ -407,120 +407,124 @@
   content: "\EA30"
 }
 
-.icon-parallel:before {
+.icon-p2pt:before {
   content: "\EA31"
 }
 
-.icon-pencil:before {
+.icon-parallel:before {
   content: "\EA32"
 }
 
-.icon-person:before {
+.icon-pencil:before {
   content: "\EA33"
 }
 
-.icon-piechart:before {
+.icon-person:before {
   content: "\EA34"
 }
 
-.icon-play-circle:before {
+.icon-piechart:before {
   content: "\EA35"
 }
 
-.icon-plus:before {
+.icon-play-circle:before {
   content: "\EA36"
 }
 
-.icon-presentation:before {
+.icon-plus:before {
   content: "\EA37"
 }
 
-.icon-pubnub:before {
+.icon-presentation:before {
   content: "\EA38"
 }
 
-.icon-radar:before {
+.icon-pubnub:before {
   content: "\EA39"
 }
 
-.icon-refresh:before {
+.icon-radar:before {
   content: "\EA3A"
 }
 
-.icon-resolve:before {
+.icon-refresh:before {
   content: "\EA3B"
 }
 
-.icon-sankey:before {
+.icon-resolve:before {
   content: "\EA3C"
 }
 
-.icon-scatterplot:before {
+.icon-sankey:before {
   content: "\EA3D"
 }
 
-.icon-search:before {
+.icon-scatterplot:before {
   content: "\EA3E"
 }
 
-.icon-send:before {
+.icon-search:before {
   content: "\EA3F"
 }
 
-.icon-settings:before {
+.icon-send:before {
   content: "\EA40"
 }
 
-.icon-slides:before {
+.icon-settings:before {
   content: "\EA41"
 }
 
-.icon-social:before {
+.icon-slides:before {
   content: "\EA42"
 }
 
-.icon-sort-asc:before {
+.icon-social:before {
   content: "\EA43"
 }
 
-.icon-sort-desc:before {
+.icon-sort-asc:before {
   content: "\EA44"
 }
 
-.icon-sound-off:before {
+.icon-sort-desc:before {
   content: "\EA45"
 }
 
-.icon-sound-on:before {
+.icon-sound-off:before {
   content: "\EA46"
 }
 
-.icon-stop-circle:before {
+.icon-sound-on:before {
   content: "\EA47"
 }
 
-.icon-sync:before {
+.icon-stop-circle:before {
   content: "\EA48"
 }
 
-.icon-table:before {
+.icon-sync:before {
   content: "\EA49"
 }
 
-.icon-trash:before {
+.icon-table:before {
   content: "\EA4A"
 }
 
-.icon-warning:before {
+.icon-trash:before {
   content: "\EA4B"
 }
 
-.icon-zoom-out:before {
+.icon-warning:before {
   content: "\EA4C"
 }
 
-.icon-zoom:before {
+.icon-zoom-out:before {
   content: "\EA4D"
+}
+
+.icon-zoom:before {
+  content: "\EA4E"
 }
 
 
