feat: Quiz add partial solution support to matrix

--- a/src/scss/03_elements/_elements.input.scss
+++ b/src/scss/03_elements/_elements.input.scss
@@ -85,6 +85,7 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   &.is-success,
+  &.is-success:checked,
   &.is-success[disabled]:checked {
     border-color: rgb(var(--lia-success));
   }
@@ -148,7 +149,7 @@ input[type="search"]::-webkit-search-results-decoration {
     }
   }
 
-  &.is-success[disabled]:checked {
+  &.is-success:checked {
     background-color: rgb(var(--lia-success));
   }
 
