fix: ASCII-art partial solution

--- a/src/scss/05_components/_components.dropdown.scss
+++ b/src/scss/05_components/_components.dropdown.scss
@@ -46,4 +46,12 @@
   &.is-disabled {
     border-color: rgb(var(--lia-grey));
   }
+
+  &.is-failure {
+    border-color: rgb(var(--lia-red));
+  }
+
+  &.is-success {
+    border-color: rgb(var(--lia-success));
+  }
 }
